# Nirman

./: RUNTIME_V2_AUDIT.md  benchmark-results.json  eslint.config.mjs  package.json  worklog.md
.zscripts/: dev.pid
agent-ctx/: FixTSC-Z.ai-Code.md  PhaseA-zai-code.md  X-Task-X-preview-fidelity.md
scripts/: README.md  benchmark.mjs  check-boundaries.mjs  regression-tests.mjs  repeatability-check.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/preview_engine/: build_service.rs  mod.rs  preview_manager.rs  stream_service.rs
tool-results/: bash_1784026086013_4ae7c793161b.txt  bash_1784026139882_963721009b01.txt  bash_1784041379461_7659c54357f2.txt  bash_1784057560910_68152cdeedfe.txt  bash_1784080931154_be19176e8071.txt  read_1783899438645_a14e0be35681.txt  read_1784041893652_f22e6d3de6f6.txt  read_1784041896293_aab93e330945.txt  read_1784042789264_b8bf635a9be3.txt  read_1784042792350_b3a0f1da719e.txt  read_1784042809698_38c0b7ffdbbb.txt  read_1784042812076_a0d857510e1b.txt  read_1784044894195_fdd6728d15d6.txt  read_1784044910294_86f610fcd04b.txt  read_1784049668144_2f7eb86b5424.txt  read_1784049864959_b7f5818d040c.txt  read_1784052653143_d8a89066c140.txt  read_1784052665692_9c91f4ceb5ac.txt  read_1784052676922_31f9050b25e4.txt  read_1784057532298_d43f89d3ff72.txt  read_1784057567081_faad268717a4.txt  read_1784080932870_4c77d37da6be.txt  read_1784080949490_05d33e28211b.txt  read_1784080951035_d104b2c252bf.txt  read_1784084363471_d5120a18f5f3.txt  read_1784086871129_57edc7a4bdf4.txt  (+6 more)
(+139 files in other folders)
