[package]
name = "nirman-desktop"
version = "0.1.0"
description = "Nirman — Unified Builder Desktop Host"
authors = ["Nirman Labs"]
edition = "2021"

[lib]
name = "nirman_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["default"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Direct3D11",
  "Win32_System_WinRT_Graphics_Capture",
  "Graphics_Capture",
  "Graphics_DirectX_Direct3D11",
  "Foundation",
  "Foundation_Metadata",
] }

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
strip = true
